aaa.com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: hello-world
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: hello-world
        restartTime: '20231209072316'
    spec:
      containers:
        - name: hello-world
          image: nginx
          env: []
          resources:
            requests:
              cpu: 10m
              memory: 6Mi
            limits:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 80
              name: qjkpxfnozhqj
          imagePullPolicy: Always
          volumeMounts: []
      volumes: []
