aaa.com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
    - port: 80
      targetPort: 80
      name: qjkpxfnozhqj
  selector:
    app: hello-world
